--- a/style.css
+++ b/style.css
@@ -347,12 +347,12 @@ li {
 }
 
 @keyframes fadeIn {
-    from {
+    0% {
         opacity: 0;
-        transform: translate(-50%, -50%) scale(0.8);
+        transform: translateY(-10px);
     }
-    to {
+    100% {
         opacity: 1;
-        transform: translate(-50%, -50%) scale(1);
+        transform: translateY(0);
     }
 }
